// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Button renders button correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "marginBottom": 148,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(116, 158, 253, 1)",
          "borderRadius": 88,
          "height": 176,
          "justifyContent": "center",
          "marginTop": 64,
          "opacity": 1,
          "width": 542,
        }
      }
      testID="shipping-button"
    >
      <View
        borderRadius={44}
        colorScheme="rgba(165, 193, 255, 1)"
        height={88}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(165, 193, 255, 1)",
              "borderRadius": 88,
              "height": 166,
              "justifyContent": "center",
              "width": 536,
            },
          ]
        }
        width={271}
      >
        <View
          borderRadius={44}
          colorScheme="rgba(127, 166, 253, 1)"
          height={88}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(127, 166, 253, 1)",
                "borderRadius": 108,
                "height": 162,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 536,
              },
            ]
          }
          width={271}
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#000000"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="XLARGE"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 36,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#000000",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "color": "#FFFFFF",
                  "marginTop": 16,
                },
              ]
            }
          >
            Submit and ship
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "justifyContent": "center",
          "paddingBottom": 38,
          "paddingTop": 114,
          "position": "absolute",
          "top": 152,
          "width": 638,
          "zIndex": -1,
        },
      ]
    }
  >
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#222222"
      fontFamily="REGULAR"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "CalibreRegular",
            "fontSize": 24,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
        ]
      }
    >
      Your prize awaits!
    </Text>
  </View>
</View>
`;

exports[`Component Button renders disabled button correctly 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "marginBottom": 148,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "marginHorizontal": 10,
          "marginVertical": 10,
        },
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(160,160,160,1)",
          "borderRadius": 88,
          "height": 176,
          "justifyContent": "center",
          "marginTop": 64,
          "opacity": 1,
          "width": 542,
        }
      }
      testID="shipping-button"
    >
      <View
        borderRadius={44}
        colorScheme="rgba(209,209,209,1)"
        height={88}
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(209,209,209,1)",
              "borderRadius": 88,
              "height": 166,
              "justifyContent": "center",
              "width": 536,
            },
          ]
        }
        width={271}
      >
        <View
          borderRadius={44}
          colorScheme="rgba(183,183,183,1)"
          height={88}
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(183,183,183,1)",
                "borderRadius": 108,
                "height": 162,
                "justifyContent": "center",
                "marginTop": 8,
                "width": 536,
              },
            ]
          }
          width={271}
        >
          <Text
            alignCenter={false}
            allowFontScaling={true}
            color="#000000"
            fontFamily="MEDIUM"
            isUnderlined={false}
            isUppercase={false}
            maxFontSizeMultiplier={1.3}
            size="XLARGE"
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "Calibre-Medium",
                  "fontSize": 36,
                  "justifyContent": "center",
                  "textAlign": "left",
                  "textDecorationColor": "#000000",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                  "textTransform": "none",
                },
                Object {
                  "color": "#FFFFFF",
                  "marginTop": 16,
                },
              ]
            }
          >
            Submit and ship
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 8,
          "justifyContent": "center",
          "paddingBottom": 38,
          "paddingTop": 114,
          "position": "absolute",
          "top": 152,
          "width": 638,
          "zIndex": -1,
        },
      ]
    }
  >
    <Text
      alignCenter={false}
      allowFontScaling={true}
      color="#222222"
      fontFamily="REGULAR"
      isUnderlined={false}
      isUppercase={false}
      maxFontSizeMultiplier={1.3}
      size="XSMALL"
      style={
        Array [
          Object {
            "color": "#222222",
            "fontFamily": "CalibreRegular",
            "fontSize": 24,
            "justifyContent": "center",
            "textAlign": "left",
            "textDecorationColor": "#222222",
            "textDecorationLine": "none",
            "textDecorationStyle": "solid",
            "textTransform": "none",
          },
        ]
      }
    >
      Fill out the form to ship your prize!
    </Text>
  </View>
</View>
`;
